# BESS

./: .gitignore  README.md  battery.py  battery_core.py  energy_cost.py  proof_of_concept.py  pyproject.toml  random_benchmark.py  run_downloads.py  run_pv_sim.py  runner.py  validation.py
battery_sim/: __init__.py  battery_core.py  degradation.py  simulator.py  temp.py
configs/: config.yaml
data/: metadata_stations.csv
download/: __init__.py  horizon.py  meta_data.py  run_downloads.py  smard.py  solar.py  weather.py  weather_fc.py
evaluation/: grid_costs.py  result_plots.py
optimizer/: analyze_consumption_pattern.py  forecast.py  forecast_df.py  forecast_weather.py  optimizer.py  optimizer_core.py
pv_sim/: README.md  __init__.py  compute_dni.py  compute_effective_irradiance.py  compute_poa.py  modul_sim.py  run_pv.py  runner.py  seen_pos.py  true_pos.py
sanity/: random_benchmark.py
tests/: conftest.py  test_battery.py  test_battery_simulator_state.py  test_battery_simulator_temperature.py  test_battery_temperature.py  test_degradation_calendar.py  test_degradation_cycle.py  test_degradation_helpers.py  test_degradation_integration.py  test_degradation_state.py  test_degradation_update_validation.py  test_degradation_validation.py  test_pv_compute_dni.py  test_pv_compute_poa.py  test_pv_effective_irradiance.py  test_pv_modul_sim.py  test_pv_pipeline_integration.py  test_pv_readme_consistency.py  test_pv_repo_root_helpers.py  test_pv_seen_pos.py  test_pv_true_pos.py  test_pv_visualizations.py  test_true_sun_position.py  test_validation.py
(+67 files in other folders)
